src-ken&y/objects/Label__c.object
<CustomObject>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Labels</relationshipLabel>
        <relationshipName>Labels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Labels</relationshipLabel>
        <relationshipName>Labels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Per_Label__c</fullName>
        <label>Quantity Per Label</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Labels</relationshipLabel>
        <relationshipName>Labels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Labels</relationshipLabel>
        <relationshipName>Labels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Labels</relationshipLabel>
        <relationshipName>Labels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Labels</relationshipLabel>
        <relationshipName>Labels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Label</label>
    <nameField>
        <label>Labels Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>